; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_memcached.c_h2o_memcached_delete.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_memcached.c_h2o_memcached_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REQ_TYPE_DELETE = common dso_local global i32 0, align 4
@H2O_MEMCACHED_ENCODE_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_memcached_delete(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @REQ_TYPE_DELETE, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @H2O_MEMCACHED_ENCODE_KEY, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32* @create_req(i32* %8, i32 %9, i32 %10, i32 %15)
  store i32* %16, i32** %7, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @dispatch(i32* %17, i32* %18)
  ret void
}

declare dso_local i32* @create_req(i32*, i32, i32, i32) #1

declare dso_local i32 @dispatch(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
